[metadata]
name = realtime-redis-backup
description = Realtime backup Redis data to S3
version = file: VERSION
long_description = file: README.rst TODO.rst
keywords = unix, pipes, stdin, stderr
license = License :: OSI Approved :: BSD License
classifiers =
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
authors = cr0hn
authors_email = cr0hn@cr0hn.com
url = https://github.com/cr0hn/realtime-redis-backup

[options]
zip_safe = True
include_package_data = True
packages = find:

[options.entry_points]
console_scripts =
    rrb = realtime_redis_backup.__main__:main
    rrb-restore = realtime_redis_backup.__main__restore__:main
